--- a/app/assets/javascripts/app/menu.html
+++ b/app/assets/javascripts/app/menu.html
@@ -27,6 +27,9 @@
           </li>
         </ul>
       </li>
+      <li>
+        <a href="#/production">Production Dashboard</a>
+      </li>
     </ul>
     <form class="navbar-form navbar-left demo-feature" role="search">
       <div class="form-group">
