--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -10,11 +10,11 @@
     </div>
     <div class="col-xs-10">
       <script type="text/ng-template" id="myPopoverTemplate.html">
-        <alert ng-repeat="notif in ctrl.mnNotify.get()"
+        <alert ng-repeat="notif in ctrl.mnNotify.get() | reverse"
                type="{{notif.type}}">{{notif.text}}</alert>
       </script>
-      <button class="btn btn-primary" ng-click="ctrl.addSuccessNotif()">success</button>
-      <button class="btn btn-primary" ng-click="ctrl.addDangerNotif()">danger</button>
+      <button class="btn btn-success" ng-click="ctrl.addSuccessNotif()">success</button>
+      <button class="btn btn-danger" ng-click="ctrl.addDangerNotif()">danger</button>
       <button class="btn btn-primary"
               popover-placement="bottom"
               popover-title="Notifications"
