--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -11,7 +11,7 @@
     <div class="col-xs-10">
       <script type="text/ng-template" id="myPopoverTemplate.html">
         <alert ng-repeat="notif in ctrl.mnNotify.get() | reverse"
-               type="{{notif.type}}">{{notif.text}}</alert>
+               type="{{notif.type}}">{{notif.message}}</alert>
       </script>
       <button class="btn btn-success" ng-click="ctrl.addSuccessNotif()">success</button>
       <button class="btn btn-danger" ng-click="ctrl.addDangerNotif()">danger</button>
