mns-button adds popover dynamically
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -16,9 +16,7 @@
       <button class="btn btn-success" ng-click="ctrl.addSuccessNotif()">success</button>
       <button class="btn btn-danger" ng-click="ctrl.addDangerNotif()">danger</button>
       <button class="btn btn-primary"
-              popover-placement="bottom"
-              popover-title="Notifications"
-              popover-template="'myPopoverTemplate.html'">notifications ({{ctrl.mnNotify.get().length}})</button>
+              mns-button>notifications ({{ctrl.mnNotify.get().length}})</button>
     </div>
   </div>
   <div class="mn-grid-layout-row row">
