allow user to override mns-button default content
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -12,7 +12,7 @@
       <button class="btn btn-success" ng-click="ctrl.addSuccessNotif()">success</button>
       <button class="btn btn-danger" ng-click="ctrl.addDangerNotif()">danger</button>
       <button class="btn btn-primary"
-              mns-button>notifications ({{ctrl.mnNotify.get().length}})</button>
+              mns-button></button>
     </div>
   </div>
   <div class="mn-grid-layout-row row">
