--- a/app/assets/javascripts/mohican/directives/mns-button/template.html
+++ b/app/assets/javascripts/mohican/directives/mns-button/template.html
@@ -1,3 +1,4 @@
+<span ng-if="showDefaultContent">notifications ({{ctrl.mnNotify.get().length}})</span>
 <script type="text/ng-template" id="mnPopoverTpl.html">
   <alert ng-repeat="notif in ctrl.mnNotify.get() | reverse"
          type="{{notif.type}}">{{notif.message}}</alert>
