no style on mns-button by default
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -11,7 +11,7 @@
     <div class="col-xs-10">
       <button class="btn btn-success" ng-click="ctrl.addSuccessNotif()">success</button>
       <button class="btn btn-danger" ng-click="ctrl.addDangerNotif()">danger</button>
-      <button class="btn btn-primary"
+      <button class="btn"
               mns-button></button>
     </div>
   </div>
