clear one notif
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mns-button/template.html
+++ b/app/assets/javascripts/mohican/directives/mns-button/template.html
@@ -3,7 +3,8 @@
   <div ng-if="mnNotify.get().length === 0">
     There is no new notifications
   </div>
-  <alert ng-repeat="notif in mnNotify.get() | reverse"
+  <alert close="notif.clear()"
+         ng-repeat="notif in mnNotify.get() | reverse"
          type="{{notif.type}}">
     <strong>{{notif.message}}</strong>
     <div>
