--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -13,7 +13,7 @@
       <button class="btn btn-info" ng-click="ctrl.addNotif('info')">info</button>
       <button class="btn btn-warning" ng-click="ctrl.addNotif('warning')">warning</button>
       <button class="btn btn-danger" ng-click="ctrl.addNotif('danger')">danger</button>
-      <button class="btn btn-primary" ng-click="ctrl.mnNotify.clear()">clear</button>
+      <button class="btn btn-primary" ng-click="ctrl.mnNotify.clearAll()">clear</button>
       <button class="btn"
               mns-button></button>
     </div>
