do not override user's mns-button params
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -15,7 +15,8 @@
       <button class="btn btn-danger" ng-click="ctrl.addNotif('danger')">danger</button>
       <button class="btn btn-primary" ng-click="ctrl.mnNotify.clearAll()">clear</button>
       <button class="btn"
-              mns-button></button>
+              mns-button
+              popover-placement="right"></button>
     </div>
   </div>
   <div class="mn-grid-layout-row row">
