--- a/app/assets/javascripts/mohican/directives/mns-button/template.html
+++ b/app/assets/javascripts/mohican/directives/mns-button/template.html
@@ -1,4 +1,4 @@
-notifications ({{mnNotify.get().length}})
+{{buttonCaption}}
 <script type="text/ng-template" id="mnPopoverTpl.html">
   <div class="notifications-holder">
     <alert template-url="mnAlert.html"
