user side dismissable notification messsage
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/menu.html
+++ b/app/assets/javascripts/app/menu.html
@@ -31,6 +31,9 @@
         <a href="#/production">Production Dashboard</a>
       </li>
     </ul>
+    <button class="btn pull-right"
+            style="margin-top: 8px;"
+            mns-button></button>
     <form class="navbar-form navbar-left demo-feature" role="search">
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Search" />
