--- a/app/assets/javascripts/app/menu.html
+++ b/app/assets/javascripts/app/menu.html
@@ -33,7 +33,7 @@
     </ul>
     <button class="btn pull-right"
             style="margin-top: 8px;"
-            mns-button></button>
+            mns-button="30"></button>
     <form class="navbar-form navbar-left demo-feature" role="search">
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Search" />
