modal message notification
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -9,6 +9,7 @@
       <a href="#/orders/new" class="btn btn-primary">New Order</a>
     </div>
     <div class="col-xs-10">
+      <button class="btn btn-danger" ng-click="ctrl.addModalNotif()">danger modal</button>
       <button class="btn btn-success" ng-click="ctrl.addNotif('success')">success</button>
       <button class="btn btn-info" ng-click="ctrl.addNotif('info')">info</button>
       <button class="btn btn-warning" ng-click="ctrl.addNotif('warning')">warning</button>
