self dissmesed notification message
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -13,6 +13,7 @@
       <button class="btn btn-success" ng-click="ctrl.addNotif('success')">success</button>
       <button class="btn btn-info" ng-click="ctrl.addNotif('info')">info</button>
       <button class="btn btn-warning" ng-click="ctrl.addNotif('warning')">warning</button>
+      <button class="btn btn-success" ng-click="ctrl.addNotif('success', false, [], 3)">success self dissmis</button>
       <button class="btn btn-warning" ng-click="ctrl.addNotif('warning', true)">fully clickable warning</button>
       <button class="btn btn-danger" ng-click="ctrl.addNotif('danger')">danger</button>
       <button class="btn btn-danger" ng-click="ctrl.addNotif('danger', false, ['yes', 'no', 'cancel'])">danger [yes, no, cancel]</button>
