fix: mns-button overflow, mnsMessage default params
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/menu.html
+++ b/app/assets/javascripts/app/menu.html
@@ -32,7 +32,7 @@
       </li>
     </ul>
     <button class="btn pull-right"
-            style="margin-top: 8px;"
+            style="margin-top: 8px; width: 200px;"
             mns-button="30"></button>
     <form class="navbar-form navbar-left demo-feature" role="search">
       <div class="form-group">
