mark development buttons as demo feature
Class demo-feature hides anything in it. It can be used
exactly for what it is used in this commit, to hide something
unless we really want to show it.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -8,7 +8,7 @@
     <div class="col-xs-2">
       <a href="#/orders/new" class="btn btn-primary">New Order</a>
     </div>
-    <div class="col-xs-10">
+    <div class="col-xs-10 demo-feature">
       <button class="btn btn-danger" ng-click="ctrl.addModalNotif()">danger modal</button>
       <button class="btn btn-success" ng-click="ctrl.mnNotify.create({
         type: 'success',
