notification button css for navbar
This commit allows the mns-button to sit in the navbar and become
full width when the width is bellow the braking point (hamburger
icon is active).

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/app/menu.html
+++ b/app/assets/javascripts/app/menu.html
@@ -9,6 +9,9 @@
     </button>
     <a class="navbar-brand" href="/#/begin"></a>
   </div>
+  <button class="navbar-right mns-navbar btn"
+          style="width: 200px;"
+          mns-button="30"></button>
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" collapse="navCollapsed">
     <ul class="nav navbar-nav">
@@ -31,9 +34,6 @@
         <a href="#/production">Production Dashboard</a>
       </li>
     </ul>
-    <button class="btn pull-right"
-            style="margin-top: 8px; width: 200px;"
-            mns-button="30"></button>
     <form class="navbar-form navbar-left demo-feature" role="search">
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Search" />
