--- a/app/assets/javascripts/app/routes/orders-index.html
+++ b/app/assets/javascripts/app/routes/orders-index.html
@@ -1,14 +1,14 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-10">
       <mn-filter-bar></mn-filter-bar>
     </div>
-  </div>
-  <div class="row">
     <div class="col-xs-2">
       <a href="#/orders/new" class="btn btn-primary">New Order</a>
     </div>
-    <div class="col-xs-10 demo-feature">
+  </div>
+  <div class="row demo-feature">
+    <div class="col-xs-10">
       <button class="btn btn-danger" ng-click="ctrl.addModalNotif()">danger modal</button>
       <button class="btn btn-success" ng-click="ctrl.mnNotify.create({
         type: 'success',
