--- a/app/assets/javascripts/mohican/directives/mn-filter-bar/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-filter-bar/template.html
@@ -1,31 +1,65 @@
-<div class="btn-toolbar">
-  <div isteven-multi-select ng-show="filterBar.owner.layouts.length > 1"
-       class="primary pull-left"
-       input-model="filterBar.owner.layouts"
-       on-item-click="filterBar.changeLayout(data.name)"
-       output-model="filterBar.outputBrowsers"
-       button-label="show"
-       item-label="name desc"
-       tick-property="selected"
-       selection-mode="single"
-       helper-elements="">
+<div class="row">
+  <div class="col-xs-12 btn-toolbar">
+    <form class="form-inline">
+      <div class="form-group">
+        <div isteven-multi-select ng-show="filterBar.owner.documentFilters.length > 1"
+             class="primary pull-left"
+             input-model="filterBar.owner.documentFilters"
+             output-model="filterBar.seletedDocumentFilters"
+             button-label="show"
+             item-label="name"
+             tick-property="selected"
+             selection-mode="single"
+             helper-elements="">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="delivery-date-range">Delivery date</label>
+        <input id="delivery-date-range"
+               type="text"
+               date-range-picker
+               clearable="true"
+               class="form-control date-picker"
+               ng-model="filterBar.deliveryDateRange"
+               style="width: 200px" />
+      </div>
+      <div class="form-group">
+        <label for="status">Status</label>
+        <span isteven-multi-select
+              class="success"
+              translation="filterBar.statusesLabels"
+              input-model="filterBar.statuses"
+              output-model="filterBar.selectedStatuses"
+              button-label="name"
+              item-label="name"
+              tick-property="selected"
+              helper-elements="">
+        </span>
+      </div>
+      <button class="btn btn-primary"
+              ng-click="filterBar.changeDocumentFilter()">Change</button>
+    </form>
   </div>
-  <div isteven-multi-select ng-show="filterBar.owner.documentFilters.length > 1"
-       class="primary pull-left"
-       input-model="filterBar.owner.documentFilters"
-       on-item-click="filterBar.changeBackendFilter(data.name)"
-       output-model="filterBar.outputBrowsers"
-       button-label="show"
-       item-label="name"
-       tick-property="selected"
-       selection-mode="single"
-       helper-elements="">
+</div>
+<div class="row">
+  <div class="col-xs-12 btn-toolbar">
+    <div isteven-multi-select ng-show="filterBar.owner.layouts.length > 1"
+         class="primary pull-left"
+         input-model="filterBar.owner.layouts"
+         on-item-click="filterBar.changeLayout(data.name)"
+         output-model="filterBar.outputBrowsers"
+         button-label="show"
+         item-label="name desc"
+         tick-property="selected"
+         selection-mode="single"
+         helper-elements="">
+    </div>
+    <button type="button"
+            class="btn {{filterBar.owner.stateMachine.quickFilterShown ? '' : 'btn-primary'}}"
+            ng-click="filterBar.owner.toggleQuickFilter()"
+            ng-disabled="!filterBar.owner.fullyLoaded">
+      <span class="pull-left">Quick Filter</span>
+      <span class="loader pull-left" ng-show="!filterBar.owner.fullyLoaded" style="margin: 0px 0px 0px 8px;"></span>
+    </button>
   </div>
-  <button type="button"
-          class="btn {{filterBar.owner.stateMachine.quickFilterShown ? '' : 'btn-primary'}}"
-          ng-click="filterBar.owner.toggleQuickFilter()"
-          ng-disabled="!filterBar.owner.fullyLoaded">
-    <span class="pull-left">Quick Filter</span>
-    <span class="loader pull-left" ng-show="!filterBar.owner.fullyLoaded" style="margin: 0px 0px 0px 8px;"></span>
-  </button>
 </div>
