disable commit and delete buttons if there is connectivity problem
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnf-commit-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-commit-grid/template.html
@@ -1,4 +1,5 @@
 <span ng-click="commitItem()"
+      ng-disabled="mnPing.offlineWarning"
       ng-if="mnfFormGridCtrl.mnfSubdocumetsGrid === false &&
              mnfFormGridCtrl.mnfCrudShown &&
              (mnfDoc._state === 'changed' || mnfDoc._state === 'editing' || mnfDoc._state === 'committing')"
