order no in quick filter now has the same size as every other box in it
Removed input-sm class from mohican.css.css file since that class was used just in mn-qf-text/template.html.

Signed-off-by: Filip Kunjadić - Ćulibrk <filip.kunjadic@pixel2go.com>

--- a/app/assets/javascripts/mohican/directives/mn-qf-text/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-qf-text/template.html
@@ -4,7 +4,7 @@
          ng-model="qfText.model"
          ng-change="qfText.inputChanged()"
          _style="height: 34px;"
-         class="form-control input-sm" />
+         class="form-control" />
   <div class="input-group-addon">
     <span class="glyphicon glyphicon-filter"></span>
   </div>
