fix: mnf-rollback-grid stop propagation
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mnf-rollback-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mnf-rollback-grid/template.html
@@ -1,4 +1,4 @@
-<span ng-click="rollbackItem()"
+<span ng-click="rollbackItem($event)"
       ng-if="mnfFormGridCtrl.mnfSubdocumetsGrid === false &&
              mnfFormGridCtrl.mnfCrudShown &&
              (mnfDoc._state === 'changed' || mnfDoc._state === 'editing' || mnfDoc._state === 'committing')"
