mn-grid actions aligned
It really looks cool. Actions were a bit higher, and this fix aligns
them with the other tds, although they overwrite the original
padding-top which is 8 - only 5 more should have been added.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/javascripts/mohican/directives/mn-grid/template.html
+++ b/app/assets/javascripts/mohican/directives/mn-grid/template.html
@@ -104,7 +104,7 @@
                               mnf-doc="item"
                               mnf-field-source="field.refFieldSource"></mnf-reference-grid>
         </td>
-        <td>
+        <td class="mn-grid-actions-td">
           <mn-grid-actions ng-hide="item._state === 'deleted'"></mn-grid-actions>
         <td>
       </tr>
@@ -148,7 +148,7 @@
                               mnf-doc="item"
                               mnf-field-source="field.refFieldSource"></mnf-reference-grid>
         </td>
-        <td>
+        <td class="mn-grid-actions-td">
           <mn-grid-actions ng-hide="item._state === 'deleted'"></mn-grid-actions>
         <td>
       </tr>
